# pre-commit-recap

./: pyproject.toml
.github/workflows/: python-checks.yaml
pre_commit_recap/: test_commit.py
