[tool.poetry]
name = "pre-commit-recap"
version = "0.1.0"
description = ""
authors = ["jerome drescig <jeromedrescig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
